JumpScript/tests/baselines/reference/parserExpressionStatement1.d.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserExpressionStatement1.d.jump(1,1): error TS1036: Statements are not allowed in ambient contexts.
tests/cases/conformance/parser/ecmascript5/Statements/parserExpressionStatement1.d.jump(1,1): error TS2304: Cannot find name 'Foo'.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserExpressionStatement1.d.jump (2 errors) ====
    Foo();
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
    ~~~
!!! error TS2304: Cannot find name 'Foo'.